# medarchive

./: .env.example  .env.seed.example  .gitignore  .pre-commit-config.yaml  CLAUDE.MD  README.md  RELEASE.md  REVIEW.MD  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-prod.yml  deploy-stg.yml  tests.yml
alembic/: env.py
alembic/versions/: 39f593f639da_extraction_runs_suggested_patient_id_t4_.py  a1f2c3d4e5f6_split_full_name.py  b7c8d9e0f1a2_parse_status.py  c9d0e1f2a3b4_split_confirmation_axis.py  d4e5f6a7b8c9_search_embeddings.py  e6bc69637424_domain_models_family_members_accounts_.py
app/: config.py  db.py  main.py  middleware.py  seed.py
app/models/: __init__.py  base.py  extraction.py  family.py  record.py  search.py
app/repositories/: accounts.py  embeddings.py  members.py  records.py
app/routes/: auth.py  deps.py  pages.py  profiles.py  records.py  (+2 more)
docs/: DESIGN.MD  OVERVIEW.MD  design-kit.html
infra/: README.md  backup.sh  deploy.sh  env.prod.example  env.stg.example  prod2stg.sh
tasks/: TASK-1.md  TASK-2.md  TASK-3.md  TASK-4.md  TASK-5.5.md  TASK-5.md  TASK-6.5.md  TASK-6.md  TASK-7.md
tests/: conftest.py  test_app.py  test_auth.py  test_config.py  test_embeddings.py  test_embeddings_db.py  test_env_banner.py  test_extractor.py  test_feed.py  test_imaging.py  test_indexing.py  test_llm.py  test_login_page.py  test_models.py  test_pipeline.py  test_profiles.py  test_record_delete.py  test_record_screen.py  test_record_view.py  test_records.py  test_search_chat.py  test_search_screen.py  test_seed.py  test_ui.py
(+60 files in other folders)
